fix: fix preview pdf on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,21 @@ input, button, textarea, select {
   color: red
 }
 
+.gradient-text {
+  text-decoration: none;
+  color: transparent;
+  background-image: linear-gradient(90deg, rgb(26, 247, 169), rgb(8, 205, 218), rgb(26, 247, 169));
+  background-clip: text;
+  transition: background-position 0.8s ease, color 0.3s ease;
+  background-size: 200%;
+  background-position: 100% 0;
+  background-image: linear-gradient(90deg, rgb(26, 247, 169), rgb(8, 205, 218), rgb(26, 247, 169));
+  &:hover {
+    background-image: linear-gradient(90deg, rgb(8, 205, 218), rgb(26, 247, 169), rgb(8, 205, 218));
+    background-position: 0% 0;
+  }
+}
+
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
@@ -64,20 +79,30 @@ p, h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.message-input {
-  height: 200px;
-  color: 'red'
+html {
+  overflow: auto; /* Allow scrollbars to appear */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
-html {
-  overflow: scroll;
-  overflow-x: hidden;
-}
 ::-webkit-scrollbar {
-  width: 0;  /* Remove scrollbar space */
-  background: transparent;  /* Optional: just make scrollbar invisible */
+  width: 8px; /* Set scrollbar width */
+  /*height: 6px;  Optional: Set scrollbar height if needed*/
+  background: #f5f5f5; /* Light gray background */
 }
-/* Optional: show position indicator in red */
+
 ::-webkit-scrollbar-thumb {
-  background: #FF0000;
+  background: #888; /* Dark gray thumb */
+  border-radius: 5px; /* Optional: Round the corners */
+}
+
+/* Hide scrollbar */
+.no-scrollbar {
+  /* IE and Edge */
+  -ms-overflow-style: none;
+  /* Firefox */
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
